[workspace]
resolver = "2"
members = ["sockjet"]

[workspace.dependencies]
tokio = { version = "1.42.0", features = ["full"] }
axum = { version = "0.7.9", features = ["ws"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
futures = "0.3.31"
uuid = { version = "1.11.0", features = ["v4"] }
